--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -52,7 +52,7 @@ $colors: (
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-
+$loading-md-spinner-color: dark;
 
 
 
